relatorio: Add repo url

--- a/relatorio/main.tex
+++ b/relatorio/main.tex
@@ -9,6 +9,8 @@
 \membro{Igor coelho}{113532}
 \membro{João Capucho}{113713}
 
+\coverFootnotes{\url{https://github.com/detiuaveiro/trabalho2-113532-113713}}
+
 \newmintinline{c}{}
 \newcommand{\norm}[1]{\left\lvert #1 \right\rvert}
 
